# barefoot

./: .gitignore  Cargo.toml  Makefile  README.md  barefoot.toml
.barefoot/: cargo-audit.toml  cargo-check.toml  cargo-clippy.toml  cargo-test.toml
docs/: mcp-cursor-config.md  mcp-cursor-integration.md  mcp-cursor-quickstart.md  mcp-integration.md  mcp-status.md
examples/: .cursor-mcp.json  barefoot-mcp-http.toml  mcp-config.toml
hurl/: mcp_tools.hurl
scripts/: setup-mcp.sh  test-mcp-http.sh
src/: config.rs  core.rs  error.rs  lib.rs  main.rs  runner.rs  service.rs  types.rs  utils.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  server.rs  tools.rs  transport.rs
