[package]
name = "barefoot"
version = "0.1.0"
edition = "2021"
authors = ["Barefoot Team"]
description = "A modern, flexible runner system for GitHub-like services and Jujutsu"
license = "MIT"
repository = "https://github.com/barefoot/barefoot"
keywords = ["runner", "ci", "cd", "github-actions", "jujutsu"]
categories = ["development-tools"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
async-trait = "0.1"
walkdir = "2.4"
which = "6.0"
hex = "0.4"
rand = "0.8"
url = "2.4"
dotenvy = "0.15"
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[bin]]
name = "barefoot"
path = "src/main.rs"

[lib]
name = "barefoot"
path = "src/lib.rs"
