[package]
name = "barefoot"
version = "0.1.0"
edition = "2021"
authors = ["Barefoot Team"]
description = "A modern, flexible runner system for GitHub-like services and Jujutsu"
license = "MIT"
repository = "https://github.com/barefoot/barefoot"
keywords = ["runner", "ci", "cd", "github-actions", "jujutsu"]
categories = ["development-tools"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
async-trait = "0.1"
walkdir = "2.4"
which = "8.0"
hex = "0.4"
rand = "0.9"
url = "2.4"
dotenvy = "0.15"
toml = "0.9"
nix = { version = "0.30", features = ["signal", "process"] }
notify = "6.1"
tempfile = "3.0"
plotters = "0.3"
svg = "0.13"
base64 = "0.21"
futures = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "barefoot"
path = "src/main.rs"

[lib]
name = "barefoot"
path = "src/lib.rs"
